add additional device field
